Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 215,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:01:40.418043Z",
-     "start_time": "2019-04-10T03:01:40.412447Z"
+     "end_time": "2019-04-10T03:01:56.641635Z",
+     "start_time": "2019-04-10T03:01:56.633653Z"
     }
    },
    "outputs": [
@@ -4019,7 +4019,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.9926023371428379\n"
+      "[0.872 0.452 0.672]\n"
      ]
     }
    ],
@@ -4028,12 +4028,12 @@
     "w2 = np.random.randn(expand_dim,expand_dim)\n",
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
-    "w1 = _sym_decorrelation(w1.T).T\n",
+    "w1 = _sym_decorrelation(w1)\n",
     "w2 = _sym_decorrelation(w2.T).T\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
     "# print(current_batch)\n",
-    "print(np.sum(w1**2))\n",
+    "print(np.sum(w1**2,0))\n",
     "# print(w2)\n",
     "# print(w3)\n",
     "# print((current_batch@w1).shape)"
