Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 216,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:01:56.641635Z",
-     "start_time": "2019-04-10T03:01:56.633653Z"
+     "end_time": "2019-04-10T03:02:07.906441Z",
+     "start_time": "2019-04-10T03:02:07.898936Z"
     }
    },
    "outputs": [
@@ -4019,7 +4019,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.872 0.452 0.672]\n"
+      "[0.985 0.993]\n"
      ]
     }
    ],
@@ -4028,7 +4028,7 @@
     "w2 = np.random.randn(expand_dim,expand_dim)\n",
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
-    "w1 = _sym_decorrelation(w1)\n",
+    "w1 = _sym_decorrelation(w1.T)\n",
     "w2 = _sym_decorrelation(w2.T).T\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
