Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 217,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T01:02:58.608564Z",
-     "start_time": "2019-04-10T01:02:56.094952Z"
+     "end_time": "2019-04-10T03:02:25.560853Z",
+     "start_time": "2019-04-10T03:02:25.550879Z"
     },
     "code_folding": [
      14
@@ -49,7 +49,7 @@
     "    s, u = np.linalg.eigh(np.dot(W, W.T))\n",
     "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
     "    # the eigenvalues) of W * W.T\n",
-    "    return np.dot(np.dot(u * (1./(np.sqrt(s+1e-2))+1e-8), u.T), W)"
+    "    return np.dot(np.dot(u * (1./(np.sqrt(s+1e-8))+1e-8), u.T), W)"
    ]
   },
   {
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 218,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:02:07.906441Z",
-     "start_time": "2019-04-10T03:02:07.898936Z"
+     "end_time": "2019-04-10T03:02:34.436550Z",
+     "start_time": "2019-04-10T03:02:34.429545Z"
     }
    },
    "outputs": [
@@ -4019,7 +4019,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.985 0.993]\n"
+      "[1. 1.]\n"
      ]
     }
    ],
@@ -4028,7 +4028,7 @@
     "w2 = np.random.randn(expand_dim,expand_dim)\n",
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
-    "w1 = _sym_decorrelation(w1.T)\n",
+    "w1 = _sym_decorrelation(w1)\n",
     "w2 = _sym_decorrelation(w2.T).T\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
@@ -4038,6 +4038,41 @@
     "# print(w3)\n",
     "# print((current_batch@w1).shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
