--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 220,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:02:34.436550Z",
-     "start_time": "2019-04-10T03:02:34.429545Z"
+     "end_time": "2019-04-10T03:03:00.189231Z",
+     "start_time": "2019-04-10T03:03:00.181251Z"
     }
    },
    "outputs": [
@@ -4019,7 +4019,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1.]\n"
+      "[1. 1.]\n",
+      "[[-0.984  0.167]\n",
+      " [ 0.057  0.004]\n",
+      " [ 0.167  0.986]]\n",
+      "[[0.969 0.028]\n",
+      " [0.003 0.   ]\n",
+      " [0.028 0.972]]\n"
      ]
     }
    ],
@@ -4028,12 +4034,14 @@
     "w2 = np.random.randn(expand_dim,expand_dim)\n",
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
-    "w1 = _sym_decorrelation(w1)\n",
+    "w1 = _sym_decorrelation(w1.T)\n",
     "w2 = _sym_decorrelation(w2.T).T\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
     "# print(current_batch)\n",
     "print(np.sum(w1**2,0))\n",
+    "print(w1)\n",
+    "print(w1**2)\n",
     "# print(w2)\n",
     "# print(w3)\n",
     "# print((current_batch@w1).shape)"
