Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 221,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:03:00.189231Z",
-     "start_time": "2019-04-10T03:03:00.181251Z"
+     "end_time": "2019-04-10T03:03:11.563291Z",
+     "start_time": "2019-04-10T03:03:11.557261Z"
     }
    },
    "outputs": [
@@ -4019,13 +4019,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1.]\n",
-      "[[-0.984  0.167]\n",
-      " [ 0.057  0.004]\n",
-      " [ 0.167  0.986]]\n",
-      "[[0.969 0.028]\n",
-      " [0.003 0.   ]\n",
-      " [0.028 0.972]]\n"
+      "[0.423 0.992 0.585]\n",
+      "[[-0.037 -0.983  0.181]\n",
+      " [-0.65   0.162  0.743]]\n",
+      "[[0.001 0.966 0.033]\n",
+      " [0.422 0.026 0.552]]\n"
      ]
     }
    ],
@@ -4034,7 +4032,7 @@
     "w2 = np.random.randn(expand_dim,expand_dim)\n",
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
-    "w1 = _sym_decorrelation(w1.T)\n",
+    "w1 = _sym_decorrelation(w1)\n",
     "w2 = _sym_decorrelation(w2.T).T\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
