Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 226,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:03:39.596252Z",
-     "start_time": "2019-04-10T03:03:39.587189Z"
+     "end_time": "2019-04-10T03:04:12.096443Z",
+     "start_time": "2019-04-10T03:04:12.087468Z"
     }
    },
    "outputs": [
@@ -4019,11 +4019,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.97  0.118 0.912]\n",
-      "[[-0.895 -0.276 -0.35 ]\n",
-      " [-0.41   0.205  0.889]]\n",
-      "[[0.801 0.076 0.122]\n",
-      " [0.168 0.042 0.79 ]]\n"
+      "[1. 1.]\n",
+      "[[-0.906  0.36  -0.224]\n",
+      " [-0.242 -0.005  0.97 ]]\n",
+      "[[0.821 0.058]\n",
+      " [0.129 0.   ]\n",
+      " [0.05  0.942]]\n"
      ]
     }
    ],
@@ -4032,13 +4033,13 @@
     "w2 = np.random.randn(expand_dim,expand_dim)\n",
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
-    "w1 = _sym_decorrelation(w1)\n",
+    "w1 = _sym_decorrelation(w1.T)\n",
     "w2 = _sym_decorrelation(w2.T).T\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
     "# print(current_batch)\n",
     "print(np.sum(w1**2,0))\n",
-    "print(w1)\n",
+    "print(_sym_decorrelation(w1.T)**)\n",
     "print(w1**2)\n",
     "# print(w2)\n",
     "# print(w3)\n",
