Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 229,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:04:12.096443Z",
-     "start_time": "2019-04-10T03:04:12.087468Z"
+     "end_time": "2019-04-10T03:04:40.455455Z",
+     "start_time": "2019-04-10T03:04:40.448457Z"
     }
    },
    "outputs": [
@@ -4020,11 +4020,10 @@
      "output_type": "stream",
      "text": [
       "[1. 1.]\n",
-      "[[-0.906  0.36  -0.224]\n",
-      " [-0.242 -0.005  0.97 ]]\n",
-      "[[0.821 0.058]\n",
-      " [0.129 0.   ]\n",
-      " [0.05  0.942]]\n"
+      "2.000000019999729 1\n",
+      "[[0.666 0.02 ]\n",
+      " [0.082 0.887]\n",
+      " [0.252 0.093]]\n"
      ]
     }
    ],
@@ -4039,7 +4038,7 @@
     "\n",
     "# print(current_batch)\n",
     "print(np.sum(w1**2,0))\n",
-    "print(_sym_decorrelation(w1.T)**)\n",
+    "print(np.sum(_sym_decorrelation(w1)**2),1)\n",
     "print(w1**2)\n",
     "# print(w2)\n",
     "# print(w3)\n",
