Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 233,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:04:40.455455Z",
-     "start_time": "2019-04-10T03:04:40.448457Z"
+     "end_time": "2019-04-10T03:04:59.868578Z",
+     "start_time": "2019-04-10T03:04:59.860625Z"
     }
    },
    "outputs": [
@@ -4020,10 +4020,7 @@
      "output_type": "stream",
      "text": [
       "[1. 1.]\n",
-      "2.000000019999729 1\n",
-      "[[0.666 0.02 ]\n",
-      " [0.082 0.887]\n",
-      " [0.252 0.093]]\n"
+      "[0.741 0.265 0.994]\n"
      ]
     }
    ],
@@ -4038,8 +4035,7 @@
     "\n",
     "# print(current_batch)\n",
     "print(np.sum(w1**2,0))\n",
-    "print(np.sum(_sym_decorrelation(w1)**2),1)\n",
-    "print(w1**2)\n",
+    "print(np.sum(_sym_decorrelation(w1)**2,1))\n",
     "# print(w2)\n",
     "# print(w3)\n",
     "# print((current_batch@w1).shape)"
