Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 236,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:05:06.657270Z",
-     "start_time": "2019-04-10T03:05:06.649291Z"
+     "end_time": "2019-04-10T03:07:39.126835Z",
+     "start_time": "2019-04-10T03:07:39.114838Z"
     }
    },
    "outputs": [
@@ -4020,7 +4020,7 @@
      "output_type": "stream",
      "text": [
       "[1. 1.]\n",
-      "[0.247 0.918 0.835]\n"
+      "[0.817 0.201 0.982]\n"
      ]
     }
    ],
@@ -4038,7 +4038,76 @@
     "print(np.sum(_sym_decorrelation(w1)**2,1))\n",
     "# print(w2)\n",
     "# print(w3)\n",
-    "# print((current_batch@w1).shape)"
+    "# print((current_batch@w1).shape)\n",
+    "\n",
+    "def orthogonal_procrustes(A, B, check_finite=True):\n",
+    "    \"\"\"\n",
+    "    Compute the matrix solution of the orthogonal Procrustes problem.\n",
+    "    Given matrices A and B of equal shape, find an orthogonal matrix R\n",
+    "    that most closely maps A to B using the algorithm given in [1]_.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    A : (M, N) array_like\n",
+    "        Matrix to be mapped.\n",
+    "    B : (M, N) array_like\n",
+    "        Target matrix.\n",
+    "    check_finite : bool, optional\n",
+    "        Whether to check that the input matrices contain only finite numbers.\n",
+    "        Disabling may give a performance gain, but may result in problems\n",
+    "        (crashes, non-termination) if the inputs do contain infinities or NaNs.\n",
+    "    Returns\n",
+    "    -------\n",
+    "    R : (N, N) ndarray\n",
+    "        The matrix solution of the orthogonal Procrustes problem.\n",
+    "        Minimizes the Frobenius norm of ``(A @ R) - B``, subject to\n",
+    "        ``R.T @ R = I``.\n",
+    "    scale : float\n",
+    "        Sum of the singular values of ``A.T @ B``.\n",
+    "    Raises\n",
+    "    ------\n",
+    "    ValueError\n",
+    "        If the input array shapes don't match or if check_finite is True and\n",
+    "        the arrays contain Inf or NaN.\n",
+    "    Notes\n",
+    "    -----\n",
+    "    Note that unlike higher level Procrustes analyses of spatial data, this\n",
+    "    function only uses orthogonal transformations like rotations and\n",
+    "    reflections, and it does not use scaling or translation.\n",
+    "    .. versionadded:: 0.15.0\n",
+    "    References\n",
+    "    ----------\n",
+    "    .. [1] Peter H. Schonemann, \"A generalized solution of the orthogonal\n",
+    "           Procrustes problem\", Psychometrica -- Vol. 31, No. 1, March, 1996.\n",
+    "    Examples\n",
+    "    --------\n",
+    "    >>> from scipy.linalg import orthogonal_procrustes\n",
+    "    >>> A = np.array([[ 2,  0,  1], [-2,  0,  0]])\n",
+    "    Flip the order of columns and check for the anti-diagonal mapping\n",
+    "    \n",
+    "    >>> R, sca = orthogonal_procrustes(A, np.fliplr(A))\n",
+    "    >>> R\n",
+    "    array([[-5.34384992e-17,  0.00000000e+00,  1.00000000e+00],\n",
+    "           [ 0.00000000e+00,  1.00000000e+00,  0.00000000e+00],\n",
+    "           [ 1.00000000e+00,  0.00000000e+00, -7.85941422e-17]])\n",
+    "    >>> sca\n",
+    "    9.0\n",
+    "    \"\"\"\n",
+    "    if check_finite:\n",
+    "        A = np.asarray_chkfinite(A)\n",
+    "        B = np.asarray_chkfinite(B)\n",
+    "    else:\n",
+    "        A = np.asanyarray(A)\n",
+    "        B = np.asanyarray(B)\n",
+    "    if A.ndim != 2:\n",
+    "        raise ValueError('expected ndim to be 2, but observed %s' % A.ndim)\n",
+    "    if A.shape != B.shape:\n",
+    "        raise ValueError('the shapes of A and B differ (%s vs %s)' % (\n",
+    "            A.shape, B.shape))\n",
+    "    # Be clever with transposes, with the intention to save memory.\n",
+    "    u, w, vt = svd(B.T.dot(A).T)\n",
+    "    R = u.dot(vt)\n",
+    "    scale = w.sum()\n",
+    "    return R, scale"
    ]
   },
   {
