Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4029,13 +4029,24 @@
     "w2 = np.random.randn(expand_dim,expand_dim)\n",
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
+    "def _sym_decorrelation2(W):\n",
+    "    \"\"\" Symmetric decorrelation\n",
+    "    i.e. W <- (W * W.T) ^{-1/2} * W\n",
+    "    \"\"\"\n",
+    "    s, u = np.linalg.eigh(np.dot(W, W.T))\n",
+    "    # u (resp. s) contains the eigenvectors (resp. square roots of\n",
+    "    # the eigenvalues) of W * W.T\n",
+    "    return np.dot(np.dot(u * (1./(np.sqrt(s+1e-8))+1e-8), u.T), W)\n",
+    "\n",
+    "\n",
     "w1 = _sym_decorrelation(w1.T)\n",
     "w2 = _sym_decorrelation(w2.T).T\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
+    "\n",
     "# print(current_batch)\n",
     "print(np.sum(w1**2,0))\n",
-    "print(np.sum(_sym_decorrelation(w1)**2,1))\n",
+    "print(np.sum(_sym_decorrelation2(w1)**2,1))\n",
     "# print(w2)\n",
     "# print(w3)\n",
     "# print((current_batch@w1).shape)\n",
