--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 241,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:09:55.975403Z",
-     "start_time": "2019-04-10T03:09:55.966388Z"
+     "end_time": "2019-04-10T03:12:11.682604Z",
+     "start_time": "2019-04-10T03:12:11.675616Z"
     }
    },
    "outputs": [
@@ -4019,8 +4019,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1.]\n",
-      "[1. 1.]\n"
+      "[[ 0.959  0.146  0.136]\n",
+      " [ 0.146  0.486 -0.478]\n",
+      " [ 0.136 -0.478  0.555]]\n"
      ]
     }
    ],
@@ -4035,14 +4036,7 @@
     "w2 = _sym_decorrelation(w2.T).T\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
-    "\n",
-    "# print(current_batch)\n",
-    "print(np.sum(w1**2,0))\n",
-    "print(np.sum(_sym_decorrelation2(w1)**2,1))\n",
-    "# print(w2)\n",
-    "# print(w3)\n",
-    "# print((current_batch@w1).shape)\n",
-    "\n"
+    "print(w1@w1.T)\n"
    ]
   },
   {
