Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 243,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:12:11.682604Z",
-     "start_time": "2019-04-10T03:12:11.675616Z"
+     "end_time": "2019-04-10T03:12:36.513489Z",
+     "start_time": "2019-04-10T03:12:36.506508Z"
     }
    },
    "outputs": [
@@ -4019,9 +4019,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.959  0.146  0.136]\n",
-      " [ 0.146  0.486 -0.478]\n",
-      " [ 0.136 -0.478  0.555]]\n"
+      "[[ 0.786 -0.117  0.393]\n",
+      " [-0.117  0.936  0.215]\n",
+      " [ 0.393  0.215  0.279]]\n"
      ]
     }
    ],
@@ -4032,11 +4032,11 @@
     "\n",
     "\n",
     "\n",
-    "w1 = _sym_decorrelation(w1.T)\n",
-    "w2 = _sym_decorrelation(w2.T).T\n",
+    "w1 = _sym_decorrelation(w1)\n",
+    "w2 = _sym_decorrelation(w2)\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
-    "print(w1@w1.T)\n"
+    "print(w1.T@w1)\n"
    ]
   },
   {
