Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3869,11 +3869,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 245,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:59:09.030799Z",
-     "start_time": "2019-04-10T02:59:08.982901Z"
+     "end_time": "2019-04-10T03:14:47.322152Z",
+     "start_time": "2019-04-10T03:14:47.298224Z"
     },
     "code_folding": [
      80,
@@ -3882,14 +3882,12 @@
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "attribute 'T' of 'numpy.ndarray' objects is not writable",
+     "ename": "SystemExit",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-196-e62e01d61d50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mc2\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexpand_dim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0mw1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_sym_decorrelation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[0mw2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_sym_decorrelation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mw3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mw3\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw3\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1e-8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: attribute 'T' of 'numpy.ndarray' objects is not writable"
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
      ]
     }
    ],
@@ -3924,10 +3922,10 @@
     "        current_batch = temp_X[mini_batch:mini_batch+mini_batch_size]\n",
     "        \n",
     "        layer1  = current_batch @ w1 \n",
-    "        layer1a = a*g(b*layer1)+c\n",
+    "        layer1a = a1*g(b1*layer1)+c1\n",
     "        layer2  = layer1a       @ w2 \n",
-    "        \n",
-    "        \n",
+    "        layer2a = a2*g(b1*layer2)+c2\n",
+    "        layer3  = layer2a       @ w3 \n",
     "        \n",
     "        loss    = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
