Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3869,11 +3869,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 247,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:14:47.322152Z",
-     "start_time": "2019-04-10T03:14:47.298224Z"
+     "end_time": "2019-04-10T03:15:01.758602Z",
+     "start_time": "2019-04-10T03:15:01.730679Z"
     },
     "code_folding": [
      80,
@@ -3881,6 +3881,13 @@
     ]
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 1)\n"
+     ]
+    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -3911,8 +3918,6 @@
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
     "\n",
-    "sys.exit()\n",
-    "\n",
     "temp_X = np.copy(X); mini_batch_size = 10\n",
     "\n",
     "for iter in range(2000):\n",
@@ -3926,6 +3931,11 @@
     "        layer2  = layer1a       @ w2 \n",
     "        layer2a = a2*g(b1*layer2)+c2\n",
     "        layer3  = layer2a       @ w3 \n",
+    "        \n",
+    "        print(layer3.shape)\n",
+    "        \n",
+    "        sys.exit()\n",
+    "\n",
     "        \n",
     "        loss    = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
