Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3935,7 +3935,7 @@
     "        loss    = (w3.T @ layer2a.T @ layer2a @ w3).mean()+ (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
     "        grad3 = -2 * layer2a.T@layer2a @ w3\n",
-    "        grad2a= \n",
+    "        grad2a= -2*layer1a@w2@w2.T\n",
     "        print(loss)\n",
     "        \n",
     "        sys.exit()\n",
