--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3869,11 +3869,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 249,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:15:45.600666Z",
-     "start_time": "2019-04-10T03:15:45.573715Z"
+     "end_time": "2019-04-10T03:16:38.920636Z",
+     "start_time": "2019-04-10T03:16:38.887714Z"
     },
     "code_folding": [
      80,
@@ -3885,7 +3885,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.8038053736456074\n"
+      "(10, 3)\n"
      ]
     },
     {
@@ -3935,8 +3935,8 @@
     "        loss    = (w3.T @ layer2a.T @ layer2a @ w3).mean()+ (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
     "        grad3 = -2 * layer2a.T@layer2a @ w3\n",
-    "        grad2a= -2*layer1a@w2@w2.T\n",
-    "        print(loss)\n",
+    "        grad2a= -2 * layer2a  @w3 @w3.T\n",
+    "        print(grad2a.shape)\n",
     "        \n",
     "        sys.exit()\n",
     "        \n",
