--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3869,11 +3869,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 250,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:16:38.920636Z",
-     "start_time": "2019-04-10T03:16:38.887714Z"
+     "end_time": "2019-04-10T03:16:46.810992Z",
+     "start_time": "2019-04-10T03:16:46.793425Z"
     },
     "code_folding": [
      80,
@@ -3963,6 +3963,8 @@
     "        w1 = w1 - 0.000001  * m1 \n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
+    "                w1 = _sym_decorrelation(w1)\n",
+    "\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)+1e-8))\n",
     "        a  = (a-a.mean())/a.std()\n",
     "        b  = (b-b.mean())/b.std()\n",
@@ -3970,45 +3972,7 @@
     "        cum_loss = cum_loss + loss.mean()\n",
     "        \n",
     "    if iter%500==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
-    "\n",
-    "# projection\n",
-    "projected_mine = (a*g(b*(X @ w1))+c) @ w2\n",
-    "\n",
-    "plt.figure(figsize=(20,5))\n",
-    "plt.subplot(1, 3, 1)\n",
-    "plt.scatter(X[y==0, 0], X[y==0, 1], color='red', alpha=0.5)\n",
-    "plt.scatter(X[y==1, 0], X[y==1, 1], color='blue', alpha=0.5)\n",
-    "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[0,0],evector[0,1], color=['b'], scale=2.5)\n",
-    "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[1,0],evector[1,1], color=['g'], scale=2.5)\n",
-    "\n",
-    "plt.subplot(1, 3, 2,projection='3d')\n",
-    "one_layer_project = (a*g(b*(X @ w1))+c)\n",
-    "plt.scatter(one_layer_project[:,0],one_layer_project[:,1],one_layer_project[:,2], color='red')\n",
-    "\n",
-    "plt.subplot(1, 3, 3)\n",
-    "plt.scatter(projected_mine[y==0], np.zeros((len(projected_mine)//2)),  color='red', alpha=0.05)\n",
-    "plt.scatter(projected_mine[y==1], np.zeros((len(projected_mine)//2)), color='blue', alpha=0.05)\n",
-    "plt.show()\n",
-    "\n",
-    "trace1 = go.Scatter3d(\n",
-    "    x=one_layer_project[y==0,0],\n",
-    "    y=one_layer_project[y==0,1],\n",
-    "    z=one_layer_project[y==0,2],\n",
-    "    mode='markers',\n",
-    "    line=dict(color='red',width=0.5),\n",
-    "    marker=dict(size=3,opacity=0.3)\n",
-    ")\n",
-    "trace2 = go.Scatter3d(\n",
-    "    x=one_layer_project[y==1,0],\n",
-    "    y=one_layer_project[y==1,1],\n",
-    "    z=one_layer_project[y==1,2],\n",
-    "    mode='markers',\n",
-    "    line=dict(color='blue',width=0.5),\n",
-    "    marker=dict(size=3,opacity=0.3)\n",
-    ")\n",
-    "data = [trace1,trace2]\n",
-    "fig  = go.Figure(data=data)\n",
-    "iplot(fig)"
+    "\n"
    ]
   },
   {
@@ -4049,7 +4013,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# projection\n",
+    "projected_mine = (a*g(b*(X @ w1))+c) @ w2\n",
+    "\n",
+    "plt.figure(figsize=(20,5))\n",
+    "plt.subplot(1, 3, 1)\n",
+    "plt.scatter(X[y==0, 0], X[y==0, 1], color='red', alpha=0.5)\n",
+    "plt.scatter(X[y==1, 0], X[y==1, 1], color='blue', alpha=0.5)\n",
+    "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[0,0],evector[0,1], color=['b'], scale=2.5)\n",
+    "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[1,0],evector[1,1], color=['g'], scale=2.5)\n",
+    "\n",
+    "plt.subplot(1, 3, 2,projection='3d')\n",
+    "one_layer_project = (a*g(b*(X @ w1))+c)\n",
+    "plt.scatter(one_layer_project[:,0],one_layer_project[:,1],one_layer_project[:,2], color='red')\n",
+    "\n",
+    "plt.subplot(1, 3, 3)\n",
+    "plt.scatter(projected_mine[y==0], np.zeros((len(projected_mine)//2)),  color='red', alpha=0.05)\n",
+    "plt.scatter(projected_mine[y==1], np.zeros((len(projected_mine)//2)), color='blue', alpha=0.05)\n",
+    "plt.show()\n",
+    "\n",
+    "trace1 = go.Scatter3d(\n",
+    "    x=one_layer_project[y==0,0],\n",
+    "    y=one_layer_project[y==0,1],\n",
+    "    z=one_layer_project[y==0,2],\n",
+    "    mode='markers',\n",
+    "    line=dict(color='red',width=0.5),\n",
+    "    marker=dict(size=3,opacity=0.3)\n",
+    ")\n",
+    "trace2 = go.Scatter3d(\n",
+    "    x=one_layer_project[y==1,0],\n",
+    "    y=one_layer_project[y==1,1],\n",
+    "    z=one_layer_project[y==1,2],\n",
+    "    mode='markers',\n",
+    "    line=dict(color='blue',width=0.5),\n",
+    "    marker=dict(size=3,opacity=0.3)\n",
+    ")\n",
+    "data = [trace1,trace2]\n",
+    "fig  = go.Figure(data=data)\n",
+    "iplot(fig)"
+   ]
   },
   {
    "cell_type": "code",
