Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3936,6 +3936,7 @@
     "        \n",
     "        grad3 = -2 * layer2a.T@layer2a @ w3\n",
     "        grad2a= -2 * layer2a  @w3 @w3.T\n",
+    "        grada2= grad2a*g(b*layer1)\n",
     "        print(grad2a.shape)\n",
     "        \n",
     "        sys.exit()\n",
