Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2100,7 +2100,8 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  2303.5819547936294\n",
-      "Iter :  500  Loss:  4240.48141639347\n"
+      "Iter :  500  Loss:  4240.48141639347\n",
+      "Iter :  1000  Loss:  4279.987117222345\n"
      ]
     }
    ],
