Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2045,7 +2045,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  26892.082340902663\n"
+      "Iter :  0  Loss:  26892.082340902663\n",
+      "Iter :  500  Loss:  41934.236879577045\n"
      ]
     }
    ],
