Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2047,7 +2047,8 @@
      "text": [
       "Iter :  0  Loss:  26892.082340902663\n",
       "Iter :  500  Loss:  41934.236879577045\n",
-      "Iter :  1000  Loss:  41472.30452563819\n"
+      "Iter :  1000  Loss:  41472.30452563819\n",
+      "Iter :  1500  Loss:  42011.58740363735\n"
      ]
     }
    ],
