Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:27:06.482919Z",
-     "start_time": "2019-04-10T03:27:06.472947Z"
+     "start_time": "2019-04-10T05:54:54.706Z"
     },
     "code_folding": [
-     14
+     20
     ]
    },
    "outputs": [
@@ -43,6 +42,8 @@
     "np.set_printoptions(precision=3,suppress=True)\n",
     "plt.style.use('seaborn')\n",
     "\n",
+    "from tensorflow.examples.tutorials.mnist import input_data\n",
+    "\n",
     "def _sym_decorrelation(W):\n",
     "    \"\"\" Symmetric decorrelation\n",
     "    i.e. W <- (W * W.T) ^{-1/2} * W\n",
@@ -52,6 +53,55 @@
     "    # the eigenvalues) of W * W.T\n",
     "    return np.dot(np.dot(u * (1./(np.sqrt(s+1e-8))+1e-8), u.T), W)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# impor\n",
+    "mnist = input_data.read_data_sets('../../Dataset/MNIST/', one_hot=True)\n",
+    "x_data, train_label, y_data, test_label = mnist.train.images, mnist.train.labels, mnist.test.images, mnist.test.labels\n",
+    "x_data_added,x_data_added_label = mnist.validation.images,mnist.validation.labels\n",
+    "x_data = x_data.reshape(-1, 28, 28, 1)  # 28x28x1 input img\n",
+    "y_data = y_data.reshape(-1, 28, 28, 1)  # 28x28x1 input img\n",
+    "x_data_added = x_data_added.reshape(-1, 28, 28, 1)\n",
+    "\n",
+    "x_data = np.vstack((x_data,x_data_added))\n",
+    "train_label = np.vstack((train_label,x_data_added_label))\n",
+    "\n",
+    "train_batch = np.zeros((60000,28,28,1))\n",
+    "test_batch = np.zeros((10000,28,28,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2297,10 +2347,7 @@
      "end_time": "2019-04-10T03:16:46.810992Z",
      "start_time": "2019-04-10T03:16:46.793425Z"
     },
-    "code_folding": [
-     80,
-     88
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -2637,6 +2684,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
