--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -58,13 +58,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T05:58:06.020049Z",
+     "start_time": "2019-04-10T05:58:06.009571Z"
+    },
     "code_folding": [
      16
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# import lib\n",
     "import numpy as np\n",
@@ -82,6 +99,12 @@
     "np.set_printoptions(precision=3,suppress=True)\n",
     "plt.style.use('seaborn')\n",
     "\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' \n",
+    "tf.logging.set_verbosity(tf.logging.ERROR)\n",
+    "from tensorflow.examples.tutorials.mnist import input_data\n",
+    "\n",
     "def _sym_decorrelation(W):\n",
     "    \"\"\" Symmetric decorrelation\n",
     "    i.e. W <- (W * W.T) ^{-1/2} * W\n",
@@ -94,10 +117,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T05:58:08.365794Z",
+     "start_time": "2019-04-10T05:58:07.800355Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ../../Dataset/MNIST/train-images-idx3-ubyte.gz\n",
+      "Extracting ../../Dataset/MNIST/train-labels-idx1-ubyte.gz\n",
+      "Extracting ../../Dataset/MNIST/t10k-images-idx3-ubyte.gz\n",
+      "Extracting ../../Dataset/MNIST/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import data\n",
+    "mnist = input_data.read_data_sets('../../Dataset/MNIST/', one_hot=True)\n",
+    "x_data, train_label, y_data, test_label = mnist.train.images, mnist.train.labels, mnist.test.images, mnist.test.labels\n",
+    "x_data_added,x_data_added_label = mnist.validation.images,mnist.validation.labels\n",
+    "x_data = x_data.reshape(-1, 28, 28, 1)  # 28x28x1 input img\n",
+    "y_data = y_data.reshape(-1, 28, 28, 1)  # 28x28x1 input img\n",
+    "x_data_added = x_data_added.reshape(-1, 28, 28, 1)\n",
+    "\n",
+    "x_data = np.vstack((x_data,x_data_added))\n",
+    "train_label = np.vstack((train_label,x_data_added_label))\n",
+    "\n",
+    "train_batch = np.zeros((60000,28,28,1))\n",
+    "test_batch = np.zeros((10000,28,28,1))"
+   ]
   },
   {
    "cell_type": "code",
