Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -139,6 +139,7 @@
    "source": [
     "# import data\n",
     "mnist = input_data.read_data_sets('../../Dataset/MNIST/', one_hot=True)\n",
+    "train_data,train_label,val_data,val_label,test_data,test_label = mnist.train.images,mnist.train.labels\n",
     "x_data, train_label, y_data, test_label = mnist.train.images, mnist.train.labels, mnist.test.images, mnist.test.labels\n",
     "x_data_added,x_data_added_label = mnist.validation.images,mnist.validation.labels\n",
     "x_data = x_data.reshape(-1, 28, 28, 1)  # 28x28x1 input img\n",
