--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -117,11 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T05:58:08.365794Z",
-     "start_time": "2019-04-10T05:58:07.800355Z"
+     "end_time": "2019-04-10T06:01:12.047701Z",
+     "start_time": "2019-04-10T06:01:11.602318Z"
     }
    },
    "outputs": [
@@ -132,25 +132,17 @@
       "Extracting ../../Dataset/MNIST/train-images-idx3-ubyte.gz\n",
       "Extracting ../../Dataset/MNIST/train-labels-idx1-ubyte.gz\n",
       "Extracting ../../Dataset/MNIST/t10k-images-idx3-ubyte.gz\n",
-      "Extracting ../../Dataset/MNIST/t10k-labels-idx1-ubyte.gz\n"
+      "Extracting ../../Dataset/MNIST/t10k-labels-idx1-ubyte.gz\n",
+      "(55000, 784)\n"
      ]
     }
    ],
    "source": [
     "# import data\n",
     "mnist = input_data.read_data_sets('../../Dataset/MNIST/', one_hot=True)\n",
-    "train_data,train_label,val_data,val_label,test_data,test_label = mnist.train.images,mnist.train.labels\n",
-    "x_data, train_label, y_data, test_label = mnist.train.images, mnist.train.labels, mnist.test.images, mnist.test.labels\n",
-    "x_data_added,x_data_added_label = mnist.validation.images,mnist.validation.labels\n",
-    "x_data = x_data.reshape(-1, 28, 28, 1)  # 28x28x1 input img\n",
-    "y_data = y_data.reshape(-1, 28, 28, 1)  # 28x28x1 input img\n",
-    "x_data_added = x_data_added.reshape(-1, 28, 28, 1)\n",
+    "train_data,train_label,val_data,val_label,test_data,test_label = mnist.train.images,mnist.train.labels,mnist.validation.images,mnist.validation.labels,mnist.test.images, mnist.test.labels\n",
     "\n",
-    "x_data = np.vstack((x_data,x_data_added))\n",
-    "train_label = np.vstack((train_label,x_data_added_label))\n",
-    "\n",
-    "train_batch = np.zeros((60000,28,28,1))\n",
-    "test_batch  = np.zeros((10000,28,28,1))"
+    "print(train_data.shape)"
    ]
   },
   {
