--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -117,11 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T06:01:12.047701Z",
-     "start_time": "2019-04-10T06:01:11.602318Z"
+     "end_time": "2019-04-10T06:03:15.688077Z",
+     "start_time": "2019-04-10T06:03:15.216316Z"
     }
    },
    "outputs": [
@@ -133,7 +133,7 @@
       "Extracting ../../Dataset/MNIST/train-labels-idx1-ubyte.gz\n",
       "Extracting ../../Dataset/MNIST/t10k-images-idx3-ubyte.gz\n",
       "Extracting ../../Dataset/MNIST/t10k-labels-idx1-ubyte.gz\n",
-      "(55000, 784)\n"
+      "(55000, 784) (55000, 10) 1.0 0.0\n"
      ]
     }
    ],
@@ -141,8 +141,9 @@
     "# import data\n",
     "mnist = input_data.read_data_sets('../../Dataset/MNIST/', one_hot=True)\n",
     "train_data,train_label,val_data,val_label,test_data,test_label = mnist.train.images,mnist.train.labels,mnist.validation.images,mnist.validation.labels,mnist.test.images, mnist.test.labels\n",
-    "\n",
-    "print(train_data.shape)"
+    "print(train_data.shape,train_label.shape,train_data.max(),train_data.min())\n",
+    "print(val_data.shape,val_label.shape,train_data.max(),train_data.min())\n",
+    "print(train_data.shape,train_label.shape,train_data.max(),train_data.min())"
    ]
   },
   {
