--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -117,11 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T06:03:15.688077Z",
-     "start_time": "2019-04-10T06:03:15.216316Z"
+     "end_time": "2019-04-10T06:03:38.221796Z",
+     "start_time": "2019-04-10T06:03:37.742677Z"
     }
    },
    "outputs": [
@@ -133,7 +133,9 @@
       "Extracting ../../Dataset/MNIST/train-labels-idx1-ubyte.gz\n",
       "Extracting ../../Dataset/MNIST/t10k-images-idx3-ubyte.gz\n",
       "Extracting ../../Dataset/MNIST/t10k-labels-idx1-ubyte.gz\n",
-      "(55000, 784) (55000, 10) 1.0 0.0\n"
+      "(55000, 784) (55000, 10) 1.0 0.0\n",
+      "(5000, 784) (5000, 10) 1.0 0.0\n",
+      "(10000, 784) (10000, 10) 1.0 0.0\n"
      ]
     }
    ],
@@ -142,16 +144,25 @@
     "mnist = input_data.read_data_sets('../../Dataset/MNIST/', one_hot=True)\n",
     "train_data,train_label,val_data,val_label,test_data,test_label = mnist.train.images,mnist.train.labels,mnist.validation.images,mnist.validation.labels,mnist.test.images, mnist.test.labels\n",
     "print(train_data.shape,train_label.shape,train_data.max(),train_data.min())\n",
-    "print(val_data.shape,val_label.shape,train_data.max(),train_data.min())\n",
-    "print(train_data.shape,train_label.shape,train_data.max(),train_data.min())"
+    "print(val_data.shape,val_label.shape,val_data.max(),val_data.min())\n",
+    "print(test_data.shape,test_label.shape,test_data.max(),test_data.min())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-04-10T06:04:52.310Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.imshow(val_data[0].reshape((28,28)),cmap='gray')\n",
+    "plt.grid(False)\n",
+    "plt.show()\n",
+    "print(val_label.sum(0))"
+   ]
   },
   {
    "cell_type": "code",
