--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -150,11 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T06:04:52.439433Z",
-     "start_time": "2019-04-10T06:04:52.311955Z"
+     "end_time": "2019-04-10T06:06:00.282292Z",
+     "start_time": "2019-04-10T06:06:00.145207Z"
     }
    },
    "outputs": [
@@ -172,7 +172,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[479. 563. 488. 493. 535. 434. 501. 550. 462. 495.]\n"
+      "55000.0\n",
+      "5000.0\n",
+      "(array([   0,    1,    2, ..., 4997, 4998, 4999], dtype=int64), array([5, 0, 4, ..., 2, 1, 2], dtype=int64))\n"
      ]
     }
    ],
@@ -180,16 +182,35 @@
     "plt.imshow(val_data[0].reshape((28,28)),cmap='gray')\n",
     "plt.grid(False)\n",
     "plt.show()\n",
-    "print(val_label.sum(0))\n",
-    "print(val_label.sum(0))"
+    "print(train_label.sum(0).sum())\n",
+    "print(val_label.sum(0).sum())\n",
+    "print(np.where(val_label==1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T06:05:19.593720Z",
+     "start_time": "2019-04-10T06:05:19.588756Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5000/10"
+   ]
   },
   {
    "cell_type": "code",
