Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -150,11 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T06:06:00.282292Z",
-     "start_time": "2019-04-10T06:06:00.145207Z"
+     "end_time": "2019-04-10T06:07:59.723827Z",
+     "start_time": "2019-04-10T06:07:59.605301Z"
     }
    },
    "outputs": [
@@ -174,7 +174,7 @@
      "text": [
       "55000.0\n",
       "5000.0\n",
-      "(array([   0,    1,    2, ..., 4997, 4998, 4999], dtype=int64), array([5, 0, 4, ..., 2, 1, 2], dtype=int64))\n"
+      "479.0\n"
      ]
     }
    ],
@@ -184,7 +184,9 @@
     "plt.show()\n",
     "print(train_label.sum(0).sum())\n",
     "print(val_label.sum(0).sum())\n",
-    "print(np.where(val_label==1))"
+    "temp = np.zeros(10)\n",
+    "temp[0] = 1\n",
+    "print(val_label[np.where(val_label==temp)].sum())"
    ]
   },
   {
