Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -158,7 +158,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#  create class\n",
+    "class F"
+   ]
   },
   {
    "cell_type": "code",
