Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -160,7 +160,10 @@
    "outputs": [],
    "source": [
     "#  create class\n",
-    "class F"
+    "class FNN():\n",
+    "    \n",
+    "    def __init__(self,input,output):\n",
+    "        self.w = np.random.randn(input,output)"
    ]
   },
   {
