--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -163,7 +163,7 @@
     "def arctan(x):  return np.arctan(x)\n",
     "def tan(x)   :  return np.tan(x)\n",
     "def d_arctan(x):return 1/np.cos(x)\n",
-    "def d_tanh\n",
+    "def d_tanh(x):  return 1/np.cos(x)\n",
     "\n",
     "class FNN():\n",
     "    \n",
