Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -113,7 +113,9 @@
     "    \n",
     "    def __init__(self,input,output):\n",
     "        self.w = np.random.randn(input,output)\n",
-    "        self.a = np.zeros()"
+    "        self.a = np.ones(output)\n",
+    "        self.b = np.ones(output)\n",
+    "        self.c = np.zeros(output)"
    ]
   },
   {
