Super important commit

--- a/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/6. MNIST.ipynb
@@ -94,6 +94,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T09:03:35.566659Z",
+     "start_time": "2019-04-10T09:03:34.078629Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# start session \n",
+    "sess = tf.InteractiveSession()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
@@ -126,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T09:02:33.557793Z",
-     "start_time": "2019-04-10T09:02:33.550875Z"
+     "end_time": "2019-04-10T09:03:37.608585Z",
+     "start_time": "2019-04-10T09:03:37.600128Z"
     }
    },
    "outputs": [
@@ -138,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Atan_2:0\", shape=(), dtype=int32)\n"
+      "Tensor(\"Atan_3:0\", shape=(), dtype=int32)\n"
      ]
     }
    ],
